[package]
name = "eat-where-la-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
bb8-postgres = { version = "0.8.0", features = ["with-time-0_3"] }
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dotenv = "0.15.0"
futures = "0.3"
reqwest = { version = "0.11.17", features = ["json", "blocking"] }
serde = "1.0"
serde_with = "3.0.0"
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
time = { version = "0.3.11", features = ["formatting", "parsing", "macros"] }
tower-http = { version = "0.4.3", features = ["cors", "compression-gzip"] }
tower = { version = "0.4", features = ["limit", "util"] }
tracing = "0.1"
tracing-subscriber = "0.3"